VM-全家桶/prom/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: tensuns
spec:
  tls:
    - hosts:
        - "barry-prom.*.com"
      secretName: tls-*.com
  rules:
    - host: "barry-prom.*.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
